fix for compiling with v0.5.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(hexhammdist_extension)
 
-set(PARAMETERS "-no-warnings")
+set(IGNORE_WARNINGS OFF)
+
 build_loadable_extension(
-  hexhammdist_extension ${PARAMETERS} hexhammdist_extension.cpp)
+  hexhammdist_extension hexhammdist_extension.cpp)
